src/objects/Sustainer_Upgrade__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Sustainers_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sustainers_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Browser__c</fullName>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_ID__c</fullName>
        <label>Donation ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail_Mailing_ID__c</fullName>
        <label>E-mail Mailing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail_Mailing_Name__c</fullName>
        <label>E-mail Mailing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Flag__c</fullName>
        <label>Failure Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_ID__c</fullName>
        <label>Form ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <label>Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <label>Initial Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <label>Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donations__c</fullName>
        <label>Recurring Donations</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipName>Sustainers_Upgrade</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <label>Status Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UTM_campaign__c</fullName>
        <label>UTM_campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_content__c</fullName>
        <label>UTM_content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_medium__c</fullName>
        <label>UTM_medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_source__c</fullName>
        <label>UTM_source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_term__c</fullName>
        <label>UTM_term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Amount_Formatted__c</fullName>
        <formula>Upgrade_Amount__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upgrade_Amount__c</fullName>
        <label>Upgrade Amount without decimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>Drupal User ID</description>
        <label>User ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Sustainer Upgrade</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sustainer Upgrade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sustainer Upgrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>